cabal-version: 2.4

author: Mitchell Rosen, Travis Staton
bug-reports: https://github.com/awkward-squad/proem/issues
category: Prelude
copyright: Copyright (C) 2022 Mitchell Rosen, Travis Staton
description: A modern Haskell prelude.
homepage: https://github.com/awkward-squad/proem
license: BSD-3-Clause
license-file: LICENSE
maintainer: Mitchell Rosen <mitchellwrosen@gmail.com>, Travis Staton <hello@travisstaton.com>
name: proem
stability: experimental
synopsis: A modern Haskell prelude
tested-with: GHC == 9.0.2, GHC == 9.2.4, GHC == 9.4.2
version: 0.3.0

extra-source-files:
  CHANGELOG.md
  README.md

source-repository head
  type: git
  location: https://github.com/awkward-squad/proem

library
  build-depends:
    base ^>= 4.14 || ^>= 4.15 || ^>= 4.16 || ^>= 4.17,
    bytestring ^>= 0.10 || ^>= 0.11,
    containers ^>= 0.6,
    filepath ^>= 1.4.100,
    parallel ^>= 3.2,
    template-haskell ^>= 2.18 || ^>= 2.19,
    text ^>= 1.2 || ^>= 2.0,
    unix ^>= 2.8,
  default-extensions:
    BlockArguments
    KindSignatures
    MagicHash
    NoImplicitPrelude
    PolyKinds
    ScopedTypeVariables
    TypeApplications
  exposed-modules:
    Proem
    Proem.File
    Proem.List
    Proem.Seq
  hs-source-dirs: src
  default-language: Haskell2010
  ghc-options:
    -Weverything
    -Wno-all-missed-specialisations
    -Wno-implicit-prelude
    -Wno-missed-specialisations
    -Wno-missing-import-lists
    -Wno-safe
    -Wno-unsafe
  if impl(ghc >= 8.10)
    ghc-options:
      -Wno-missing-safe-haskell-mode
      -Wno-prepositive-qualified-module
  if impl(ghc >= 9.2)
    ghc-options:
      -Wno-missing-kind-signatures
